--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <Folder Include="Y2023\"/>
+    </ItemGroup>
+
 </Project>
